--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "portal_noticias",
   "version": "1.0.0",
-  "description": "Site de noticias",
+  "description": "Site de notícias",
   "main": "noticias.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Judá",
-  "license": "ISC"
+  "author": "Claudio Junior",
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.3",
+    "mysql": "^2.13.0"
+  }
 }
